trying to deploy db into heroku

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,7 @@
 node_modules 
 .history
 DB_URL = mongodb+srv://todo:xddIJIWc5swzmeoF@cluster0.cag9i.mongodb.net/todo?retryWrites=true&w=majority
+
+DB_URLD = mongodb+srv://destination:FxGQ68hTkcM7xbZv@cluster0.cag9i.mongodb.net/todo?retryWrites=true&w=majority
+
+
