--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev", 
+    "start:prod": "node index.js", 
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\""
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
