--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev", 
-    "start:prod": "node index.js", 
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\""
+    "start:prod": "node index.js"
+    
   },
   
   "keywords": [],
