--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
+  "name": "TripScrap---Backend",
+  "version": "1.0.0",
+  "description": "## Development Team",
+  "main": "index.js",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "hbs": "^4.1.1",
-    "method-override": "^3.0.0",
-    "mongoose": "^5.11.15",
+    "method-override": "^3.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mohsin231/TripScrap---Backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mohsin231/TripScrap---Backend/issues"
+  },
+  "homepage": "https://github.com/Mohsin231/TripScrap---Backend#readme"
 }
