--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## Development Team",
   "main": "index.js",
   "dependencies": {
-    "method-override": "^3.0.0"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
