--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Development Team",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.15"
